--- a/src/components/mainSection/mainSection.module.css
+++ b/src/components/mainSection/mainSection.module.css
@@ -1,13 +1,12 @@
 .MainSection__layout {
-  padding-top: 8.5rem;
+  padding-top: .5rem;
   height: 100%;
   width: 100%;
   background-color: var(--main__white);
-  position: relative;
 }
 
 @media(min-width: 600px){
   .MainSection__layout {
-    padding-top: 1rem;
+    padding-top: .5rem;
   }
 }
