--- a/src/components/navigationMobile/navigationMobile.module.css
+++ b/src/components/navigationMobile/navigationMobile.module.css
@@ -1,8 +1,8 @@
 .NavigationMobile__layout {
-  width: 87.5%;
+  width: 100%;
   height: 30%;
   background-color: white;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   border: 1px solid black;
@@ -11,7 +11,8 @@
   align-items: center;
   justify-content: center;
   z-index:3;
-  transition: ease .5s;
+  transition: linear .2s;
+  transform-origin: left;
 }
 
 .NavigationMobile__layout ul {
@@ -30,7 +31,7 @@
 }
 
 .NavigationMobile__layout_close {
-  width: 87.5%;
+  width: 100%;
   height: 30%;
   background-color: white;
   position: absolute;
@@ -42,7 +43,7 @@
   left: -100%;
   border: 1px solid black;
   z-index:3;
-  transition: ease .5s;
+  transition: linear .2s;
 }
 
 .NavigationMobile__layout_close ul {
