--- a/src/components/podcastsSection/podcastSection.module.css
+++ b/src/components/podcastsSection/podcastSection.module.css
@@ -3,6 +3,7 @@
   max-width: 100%;
   margin: 3rem auto 0 auto;
   height: auto;
+  background-color: var(--main_white);
 }
 
 .Content__container {
