--- a/src/components/SVGContainer/SVGContainer.module.css
+++ b/src/components/SVGContainer/SVGContainer.module.css
@@ -1,36 +1,36 @@
 .Logo {
   width: 10.25rem;
-  height: 3.75rem;
+  height: 3.5rem;
   display: flex; 
   align-items: center;
-  transition: linear .3s;
-  transform: translateY(7%);
+  transition: all .1s ease;
 }
 
-.Resize {
-  width: 7.25rem;
-  height: 2.75rem;
-  display: flex; 
-  align-items: center;
-  transition: linear .3s;
-  transform: translateY(8.25%);
-}
 
 .Image_resize {
   max-width: 100%;
   height: 100%;
-  transition: linear .3s;
+  transition: all .1s ease;
 }
 
 
 .Image {
   max-width: 100%;
   height: 100%;
-  transition: linear .3s;
+  transition: all .1s ease;
   
 }
 
 
+@media(min-width: 600px) {
+  .Resize {
+  width: 7.25rem;
+  height: 2.75rem;
+  display: flex; 
+  align-items: center;
+  transition: all .1s ease;
+}
+}
 
 
 
