--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,7 +1,7 @@
 .Header__main {
   min-height: auto;
   margin: 2.625rem auto 0 auto;
-  
+  position: sticky;
   max-width: 100%;
   display: flex;
   flex-direction: column;
