--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -1,115 +1,29 @@
-.Navigation__nav_main {
-  width: 840px;
-  max-width: 100%;
-  height: auto;
-  display: flex;
-  align-items:flex-start;
-  justify-content: center;
-  position: sticky;
-  top: 0;
-  left: 50%;
-  margin-left: -420px;
-  z-index: 2;
-}
 
 .Navigation__container{
-  max-width: 100%;
-  margin-top: .5rem;
-  height: 100%;
-  width: 100%; 
-  padding: 0 1rem .1rem 1rem;
+  position: sticky;
+  top: 0;
+  max-width: 840px;
+  height: auto;
+  padding: .5rem 1rem .5rem 1rem;
   background-color: var(--main_white);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  transition: ease .3s;
-}
-
-.Navigation__container svg {
-  position: relative;
-  margin-right: 10rem;
-}
-
-.Modal__contact {
-  position: absolute;
-  top: 77.5%;
-  right: -2.5%;
-  transition: ease 1s;
+  z-index: 3;
 }
 
 .Navigation__container.Scroll {
-margin-top: 0;
-height: 40%;
-padding: 0 1rem .5rem 1rem;
+height: 50%;
+padding: .25rem 1rem .25rem 1rem;
 -webkit-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
 -moz-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
 box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
 border-bottom: .5px solid rgb(201, 201, 201);
-transition: ease .1s;
+transition: all .2s ease;
 }
 
-
-.Navigation__list {
-  display: none;
-}
-
-.Navigation__list li  {
-  list-style: none;
-  letter-spacing: none;
-  padding: .75rem 0;
-}
-
-.Navigation__list_link {
-  text-decoration: none;
-  color: var(--main_black);
-  font-size: .85rem;
-  font-weight: 500;
-  display: inline-block;
-  
-}
-
-.Navigation__list_link:hover {
-  color: black;
-}
-
-.Navigation__list_link.Link_scroll {
-  font-size: .875rem;
-}
-
-
-@media (min-width: 1005px) {
-  .Navigation__container {
-    justify-content: space-between;
-  }
-  .Navigation__nav_main ul {
-    flex-direction: row;
-  }
-}
 
 @media(min-width: 600px) {
- .Navigation__container  {
-    flex-direction: row;
-  }
-  .Navigation__list  {
-    height: auto;
-  text-align: center;
-  display: flex;
-  margin-top: 1.5rem;
-  position: relative;
-    margin: 0;
-  }
-.Navigation__list li {
-padding: .75rem .75rem;
-}
-
-.Navigation__list li:nth-of-type(1n) {
-  padding: .75rem .75rem .75rem .75rem;
-}
-
-.Navigation__list li:nth-of-type(3n)  {
-  padding: .75rem 0 .75rem .75rem;
-}
-
 .Navigation__hamburger {
   display: none;
 }
@@ -118,9 +32,9 @@ padding: .75rem .75rem;
   display: none;
 }
 
+
+
 }
-
-
 
 
 
