--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -1,40 +1,65 @@
-
-.Navigation__container{
+.Navigation__container {
   position: sticky;
   top: 0;
-  max-width: 840px;
-  height: auto;
-  padding: .5rem 1rem .5rem 1rem;
+  width: 840px;
+  max-width: 100%;
+  height: 6.5rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
   background-color: var(--main_white);
   display: flex;
   align-items: center;
   justify-content: space-between;
   z-index: 3;
+  transition: ease 0.15s;
+  -webkit-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
+  -moz-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
+  box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
+  border-bottom: 0.5px solid rgb(201, 201, 201);
+  transition: ease 0.15s;
 }
 
-.Navigation__container.Scroll {
-height: 50%;
-padding: .25rem 1rem .25rem 1rem;
--webkit-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
--moz-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
-border-bottom: .5px solid rgb(201, 201, 201);
-transition: all .2s ease;
+/* .Overlay__click {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: transparent;
+  z-index: 10;
+} */
+
+@media (min-width: 600px) {
+  .Navigation__hamburger {
+    display: none;
+  }
+
+  .Navigation__hamburger_close {
+    display: none;
+  }
+
+  .Navigation__container {
+    position: sticky;
+    top: 0;
+    width: 840px;
+    max-width: 100%;
+    height: 6.5rem;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    background-color: var(--main_white);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 3;
+    transition: ease 0.15s;
+    border-bottom: none;
+    box-shadow: none;
+  }
+
+  .Navigation__container.Scroll {
+    height: 4rem;
+    -webkit-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
+    -moz-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
+    box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
+    border-bottom: 0.5px solid rgb(201, 201, 201);
+    transition: ease 0.15s;
+  }
 }
-
-
-@media(min-width: 600px) {
-.Navigation__hamburger {
-  display: none;
-}
-
-.Navigation__hamburger_close {
-  display: none;
-}
-
-
-
-}
-
-
-
