--- a/src/components/navigationMobile/navigationMobile.module.css
+++ b/src/components/navigationMobile/navigationMobile.module.css
@@ -1,16 +1,16 @@
 .NavigationMobile__layout {
   width: 100%;
-  height: 35%;
+  height: auto;
   background-color: var(--main_white);
   position: fixed;
-  top: 11%;
+  top: 6.25rem;
   left: 0;
   border-bottom: 2px solid var(--main_black);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  z-index:3;
+  z-index:5;
   transition: all .2s linear;
   transform-origin: left;
 }
@@ -27,7 +27,7 @@
 
 .NavigationMobile__layout ul a {
   text-decoration: none;
-   color: var(--main_black);
+  color: var(--main_black);
 }
 
 .NavigationMobile__layout_close {
@@ -39,10 +39,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  top: 11%;
+  top: 6.25rem;
   left: -100%;
-  border: 1px solid black;
-  z-index:3;
+  z-index:5;
   transition: all .1s linear;
 }
 
