--- a/src/components/podcastElement/podcastElement.module.css
+++ b/src/components/podcastElement/podcastElement.module.css
@@ -8,10 +8,12 @@
 }
 
 .PodcastElement__main:hover {
--webkit-box-shadow: 1px 2px 15px 1px rgba(189,189,189,0.67);
--moz-box-shadow: 1px 2px 15px 1px rgba(189,189,189,0.67);
-box-shadow: 1px 2px 15px 1px rgba(189,189,189,0.67);
-transition: ease .2s;
+-webkit-box-shadow: 1px 1px 12px 1px rgba(189,189,189,0.67);
+-moz-box-shadow: 1px 1px 12px 1px rgba(189,189,189,0.67);
+box-shadow: 1px 1px 12px 1px rgba(189,189,189,0.67);
+transition: ease-in-out .2s;
+transform: translateY(-.75%);
+
 }
 
 
