--- a/src/components/podcastsList/podcastsList.module.css
+++ b/src/components/podcastsList/podcastsList.module.css
@@ -9,14 +9,18 @@
   -moz-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   position: absolute;
-  overflow-y: scroll;
   top: 60%;
   right: 40%;
 }
 
 .PodcastList__main_mobile {
-  overflow-y: scroll;
-  height: 9rem;
+  overflow-y: auto;
+  overflow-x: hidden;
+  webkit-overflow-Y-scrolling: touch;
+  webkit-box-align: stretch;
+  -webkit-box-orient: vertical;
+  -webkit-mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
+  height: 7rem;
 }
 
 .PodcastsList__list {
@@ -27,12 +31,11 @@
 
 .PodcastsList__list li {
   width: 100%;
-  border-bottom: .25px solid var(--main_grey);
-  border-top: .25px solid var(--main_grey);
+  height: 2.75rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: .75rem .75rem;
+  padding: .25rem .25rem;
 }
 
 .PodcastsList__list_different {
@@ -42,7 +45,7 @@
 .PodcastsList__list li a {
   text-decoration: none;
   color: grey;
-  font-size: .85rem;
+  font-size: .75rem;
   font-weight: 500;
  
 }
