--- a/src/components/podcastsList/podcastsList.module.css
+++ b/src/components/podcastsList/podcastsList.module.css
@@ -1,6 +1,6 @@
 .PodcastsList__main {
   width: 13.5rem;
-  height: 9rem;
+  height: auto;
   margin-top: .5rem;
   border: 1px solid var(--main_black);
   border-radius: 1px;
@@ -19,10 +19,6 @@
   -webkit-overflow-y-scrolling: touch;
   -webkit-mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
   height: 7rem;
-}
-
-.PodcastList__main_mobile {
-
 }
 
 .PodcastsList__list li{
