--- a/src/components/decorationLines/decorationLines.module.css
+++ b/src/components/decorationLines/decorationLines.module.css
@@ -11,7 +11,7 @@
 .Line:nth-of-type(1n) {
   margin: 0 auto;
   width: 90%;
-  height: .25px;
+  height: 1px;
   background-color: rgb(199, 199, 199);
   
 }
@@ -19,7 +19,7 @@
 .Line:nth-of-type(2n){
   margin: 0 auto;
   width: 95%;
-  height: .25px;
+  height: 1px;
   background-color: rgb(199, 199, 199);
  
 }
@@ -27,6 +27,6 @@
 .Line:nth-of-type(3n){
   margin: 0 auto;
   width: 90%;
-  height: .25px;
+  height: 1px;
   background-color: rgb(199, 199, 199);
 }
