--- a/src/components/podcastElement/podcastElement.module.css
+++ b/src/components/podcastElement/podcastElement.module.css
@@ -126,7 +126,10 @@ background-position: 80% 16%;
   font-weight: 500;
 }
 
-.PodcastElement__content_listen svg:nth-of-type(2) {
+
+
+
+.PodcastElement__content_listen svg:nth-of-type(2n) {
   cursor: pointer;
 }
 
