--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,9 +1,11 @@
 .Header__main {
-  min-height: auto;
-  margin: 2.625rem auto 0 auto;
+  margin: 0 auto; 
   max-width: 100%;
+  height: 20rem;
+  border: 1px solid red;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
 }
 
 .Header__main img {
