--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,6 +1,7 @@
 .Layout__main {
-  margin:0 auto;
+  margin: 0 auto;
   max-width: 840px;
+  height: auto;
   background-color: var(--main_white);
 }
 
