--- a/src/components/podcastsSection/podcastSection.module.css
+++ b/src/components/podcastsSection/podcastSection.module.css
@@ -1,9 +1,10 @@
 .Content__main {
   width: 100%;
   max-width: 100%;
-  margin: 3rem auto 0 auto;
+  margin: 0 auto;
   height: auto;
   background-color: var(--main_white);
+  
 }
 
 .Content__container {
