--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,12 +1,12 @@
 .Header__main {
   margin: 0 auto; 
   max-width: 100%;
-  height: 20rem;
-  border: 1px solid red;
+  height: 12.5rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
 }
+
 
 .Header__main img {
   width: 100%;
@@ -17,4 +17,86 @@
     padding: 0 1rem 0 1rem;
   }
 }
+
+
+
+@media(min-width:330px){
+  .Header__main {
+  margin: 0 auto; 
+  max-width: 100%;
+  height: 13.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+}
+
+@media(min-width:400px){
+  .Header__main {
+  margin: 0 auto; 
+  max-width: 100%;
+  height: 15rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+}
+
+
+
+@media(min-width:650px){
+  .Header__main {
+  margin: 0 auto; 
+  max-width: 100%;
+  height: 18.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+}
+
+
+@media(min-width:600px){
+  .Header__main {
+  margin: 0 auto; 
+  max-width: 100%;
+  height: 17.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+}
+
+@media(min-width:650px){
+  .Header__main {
+  margin: 0 auto; 
+  max-width: 100%;
+  height: 18.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+}
+
+@media(min-width: 750px){
+   .Header__main {
+  margin: 0 auto; 
+  max-width: 100%;
+  height: 20rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+}
+
+/* @media(m-width: 450px) {
+.Header__main {
+  margin: 0 auto; 
+  max-width: 100%;
+  height: 17.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+} */
 
