--- a/src/components/SVGContainer/SVGContainer.module.css
+++ b/src/components/SVGContainer/SVGContainer.module.css
@@ -1,29 +1,29 @@
 
 @media(min-width: 600px) {
   .Logo {
-  width: 10.25rem;
-  height: 3.5rem;
+  width: 153px;
+  height: auto;
   display: flex; 
   align-items: center;
-  transition: ease .15s;
-}
+  transition: all .5s;
+  }
 
 .Image {
-  max-width: 100%;
+  width: 100%;
   height: 100%;
-    transition: ease .15s;
 }
+
 .Image_resize {
-  max-width: 100%;
+  width: 100%;
   height: 100%;
-   transition: ease .15s;
 }
-.Resize {
-  width: 7.25rem;
-  height: 2.75rem;
+
+.Logo_resize {
+  width: 115px;
+  height: auto;
   display: flex; 
   align-items: center;
-  transition: ease .15s;
+  transition: all .5s;
 }
 }
 
