--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -32,13 +32,13 @@
     width: 840px;
     max-width: 100%;
     height: 6.5rem;
-    padding: 0.5rem 1rem 0.5rem 1rem;
+    padding: 0 1rem;
     background-color: var(--main_white);
     display: flex;
     align-items: center;
     justify-content: space-between;
     z-index: 3;
-    transition: all 0.15s;
+    transition: all 0.1s;
     border-bottom: 1px solid var(--main_black);
     box-shadow: none;
   }
@@ -50,6 +50,6 @@
     -moz-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
     box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
     border-bottom: 0.5px solid rgb(201, 201, 201);
-    transition: all 0.15s ;
+    transition: all 0.1s ;
   }
 }
