--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,6 +1,6 @@
 .Footer__main {
   width: 100%;
-  height: auto;
+  height:auto;
   background-color: var(--main_black);
   display: flex;
   justify-content: center;
@@ -9,17 +9,16 @@
 .Footer__container_normal {
   width: 840px;
   max-width: 100%;
-  min-height: 4rem;
+  min-height: 5rem;
   display: flex; 
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: .6rem 0 .4rem 0;
 }
 
 .Footer__container_narrow {
   width: 640px;
-  height: 2.5rem;
+  height: 3rem;
   display: flex; 
   align-items: center;
   justify-content: center;
@@ -28,29 +27,40 @@
 
 
 .Footer__logo_socialMedia {
-  padding: .5rem auto;
-  width: 2.5rem;
-  height: 50%;
+  margin-top: .5rem;
+  width: 3rem;
+  height: auto;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
 }
 
- .Footer__logo_socialMedia svg {
-  width: .522rem;
-  height:auto;
-  cursor:pointer;
-  transition: ease 0.1s;
+.Footer__logo_socialMedia.Narrow {
+  margin-top: 0;
 }
 
-.Footer__logo_socialMedia svg:nth-of-type(2n) {
+
+.Footer__logo_socialMedia a {
   width: 1rem;
+  height: 1rem;
+}
+
+ .Footer__logo_socialMedia svg {
+   width: 100%;
+   height: 100%;
 }
 
 .Footer__logo_socialMedia svg:hover path {
   fill: var(--main_white);
 }
 
+.Footer_line {
+  width: 11rem;
+  height: 2px;
+  margin: 0 auto;
+  background:linear-gradient(90deg, rgba(39,39,39,1) 1%, rgba(78,78,78,0.758140756302521) 13%, rgba(163,161,161,0.6180847338935574) 42%, rgba(163,161,161,0.6180847338935574) 58%, rgba(78,78,78,0.7553396358543417) 87%, rgba(39,39,39,1) 99%);
+
+}
 .Footer__text  {
   color: rgb(173, 173, 173); 
   font-size: .5rem;
@@ -59,7 +69,8 @@
 
 @media(min-width: 300px){
   .Footer__text{
-font-size: .7rem;
+  font-size: .7rem;
+  height: auto;
   }
 }
 
