--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -1,14 +1,12 @@
-.Contact__container {
-  margin-top: .5rem;
-}
-
 .Contact__layout {
+  position: absolute;
+  right: 2%;
   width: 15rem;
   height: 3rem;
   border: 1px solid var(--main_black);
   border-radius: 1px;
-  background-color: white;
-  z-index: 2;
+  background-color: var(--main_white);
+  z-index: 4;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,10 +14,9 @@
   -webkit-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   -moz-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
-  position: absolute;
-  top: 60%;
-  right: 2%;
+  transform: translateY(70px);
 }
+
 
 .Contact__layout div:nth-of-type(1n){
   height: 15%;
