--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -27,7 +27,7 @@
 
 
 .Footer__logo_socialMedia {
-  margin-top: .5rem;
+  margin: 1rem 0 .5rem 0;
   width: 3rem;
   height: auto;
   display: flex;
@@ -39,19 +39,29 @@
   margin-top: 0;
 }
 
-
-.Footer__logo_socialMedia a {
+.Facebook {
   width: 1rem;
   height: 1rem;
+  
 }
+
+.Instagram {
+  width: 1rem;
+  height: 1rem;
+  
+} 
 
  .Footer__logo_socialMedia svg {
    width: 100%;
    height: 100%;
-}
+   transform: translateY(-20%);
+   transition: all .4s;
+ }
+  
 
 .Footer__logo_socialMedia svg:hover path {
   fill: var(--main_white);
+  transition: all .4s;
 }
 
 .Footer_line {
