--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -1,6 +1,9 @@
+
+
 .Contact__layout {
   position: absolute;
-  right: 2%;
+  top: -1rem;
+  right: 0;
   width: 15rem;
   height: 3rem;
   border: 1px solid var(--main_black);
@@ -16,6 +19,7 @@
   box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   transform: translateY(70px);
 }
+
 
 
 .Contact__layout div:nth-of-type(1n){
