--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -26,6 +26,7 @@
 
 @media(min-width: 600px) {
   .Navigation__list{
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
