--- a/src/components/decorationLines/decorationLines.module.css
+++ b/src/components/decorationLines/decorationLines.module.css
@@ -12,14 +12,14 @@
   margin: 0 auto;
   width: 95%;
   height: 1px;
-  background:linear-gradient(90deg, rgba(250,250,250,1) 1%, rgba(189,189,189,0.7525385154061625) 3%, rgba(147,147,147,1) 15%, rgba(125,125,125,1) 35%, rgba(125,125,125,1) 65%, rgba(147,147,147,1) 85%, rgba(189,189,189,0.7469362745098039) 97%, rgba(250,250,250,1) 99%);
+  background:linear-gradient(90deg, rgba(250,250,250,1) 1%, rgba(211, 210, 210, 0.753) 3%, rgb(172, 172, 172) 15%, rgb(187, 187, 187) 35%, rgb(187, 187, 187) 65%, rgb(172, 172, 172) 85%, rgba(211, 210, 210, 0.753) 97%, rgba(250,250,250,1) 99%);
 }
 
 .Line:nth-of-type(2n){
   margin: 0 auto;
   width: 99.5%;
   height: 1px;
-  background:linear-gradient(90deg, rgba(250,250,250,1) 1%, rgba(189,189,189,0.7525385154061625) 3%, rgba(147,147,147,1) 15%, rgba(120,120,120,1) 35%, rgba(120,120,120,1) 65%, rgba(147,147,147,1) 85%, rgba(189,189,189,0.7469362745098039) 97%, rgba(250,250,250,1) 99%);
+  background:linear-gradient(90deg, rgba(250,250,250,1) 1%, rgba(211, 210, 210, 0.753) 3%, rgb(172, 172, 172) 15%, rgb(187, 187, 187) 35%, rgb(187, 187, 187) 65%, rgb(172, 172, 172) 85%, rgba(211, 210, 210, 0.753) 97%, rgba(250,250,250,1) 99%);
  
 }
 
@@ -27,6 +27,6 @@
   margin: 0 auto;
   width: 95%;
   height: 1px;
-  background:linear-gradient(90deg, rgba(250,250,250,1) 1%, rgba(189,189,189,0.7525385154061625) 3%, rgba(147,147,147,1) 15%, rgba(125,125,125,1) 35%, rgba(125,125,125,1) 65%, rgba(147,147,147,1) 85%, rgba(189,189,189,0.7469362745098039) 97%, rgba(250,250,250,1) 99%);
+  background:linear-gradient(90deg, rgba(250,250,250,1) 1%, rgba(211, 210, 210, 0.753) 3%, rgb(172, 172, 172) 15%, rgb(187, 187, 187) 35%, rgb(187, 187, 187) 65%, rgb(172, 172, 172) 85%, rgba(211, 210, 210, 0.753) 97%, rgba(250,250,250,1) 99%);
 
 }
