--- a/src/components/podcastTemplate/podcastTemplate.module.css
+++ b/src/components/podcastTemplate/podcastTemplate.module.css
@@ -1,6 +1,6 @@
 .Template__layout {
   max-width: 640px;
-  height: 100%;
+  height: auto;
   padding: 7.5rem 1rem 1.5rem 1rem;
   margin: 0 auto;
   background-color: var(--main_white);
