--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -6,6 +6,9 @@
 .Navigation__list li  {
   list-style: none;
   letter-spacing: none;
+  height: 100%;
+  display: flex; 
+  align-items: center;
 }
 
 .Navigation__list_link {
@@ -13,12 +16,78 @@
   color: var(--main_black);
   font-size: .85rem;
   font-weight: 500;
-  height: 100%;
+  height: 50%;
+}
+@media(min-width: 600px){
+.Navigation__list_link:hover{
+  font-weight: 400;
+  color: var(--main-black);
+  padding-bottom: 5px;
+  background: url("../../assets/images/Vawe_underline.svg");
+  background-repeat: repeat;
+  background-position-x: 0%;
+  background-position-y: 50%;
+  background-size: auto;
+  background-repeat: repeat-x;
+  background-size: 15px 5px; 
+  background-position: 2px 19px;
+  animation: move 15s linear infinite;
+  -webkit-animation: move 15s linear infinite;
+  animation-play-state: paused;
+  text-decoration: none;
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects;
+  animation-play-state: running;
+}
 }
 
-.Navigation__list_link:hover {
-  color: black;
+
+
+@-webkit-keyframes move {
+from {
+    background-position: 2px 19px;
+  }
+  to {
+    background-position: 500px 19px;
+  }
 }
+
+@-ms-keyframes move {
+from {
+    background-position: 2px 19px;
+  }
+  to {
+    background-position: 500px 19px;
+  }
+}
+
+@-moz-keyframes move {
+from {
+    background-position: 2px 19px;
+  }
+  to {
+    background-position: 500px 19px;
+  }
+}
+
+@-o-keyframes move {
+from {
+    background-position: 2px 19px;
+  }
+  to {
+    background-position: 500px 19px;
+  }
+}
+
+@keyframes move {
+from {
+    background-position: 2px 19px;
+  }
+  to {
+    background-position: 500px 19px;
+  }
+}
+
 
 .Navigation__list_link.Link_scroll {
   font-size: .875rem;
